fixed loader alignment on course details page

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -801,6 +801,7 @@ input:focus {
 .loader {
   display: flex;
   margin: 0 auto;
+  justify-content: center;
   align-items: center;
   min-height: 50vh;
 }
